Conexión entre páginas
Conexión entre todas las páginas de primer y  segundo nivel

--- a/FCT/Registro/login.html
+++ b/FCT/Registro/login.html
@@ -17,8 +17,8 @@
                 
                     <ul class="list-group list-group-horizontal-lg">
                         <li class="list-group-item"> <a href=".."><button class="bot">Principal</button></a></li>
-                        <li class="list-group-item"> <a href="#"><button class="bot">Quienes somos</button></a>   </li>
-                        <li class="list-group-item"> <a href="#"><button class="bot">Servicios</button></a> </li>                        
+                        <li class="list-group-item"> <a href="../Q_somos/quienes.html"><button class="bot">Quienes somos</button></a>   </li>
+                        <li class="list-group-item"> <a href="../servicios/opcion.html"><button class="bot">Servicios</button></a> </li>                        
                         <li class="list-group-item"> <a href="#"><button class="bot">Foro</button></a></li>
                         <li class="list-group-item"> <a href="#"><button class="bot">Log in</button></a></li>
                     </ul>
