--- a/FCT/Registro/registro.html
+++ b/FCT/Registro/registro.html
@@ -16,13 +16,12 @@
             <div class="barra">
                 
                     <ul class="list-group list-group-horizontal-lg">
-                        <li class="list-group-item"> <a href="#"><button class="bot">Quienes somos</button></a>   </li>
-                        <li class="list-group-item"> <a href="#"><button class="bot">Servicios</button></a> </li>
-                        <li class="list-group-item"> <a href="#"><button class="bot">Contactanos</button></a></li>
+                        <li class="list-group-item"> <a href=".."><button class="bot">Principal</button></a></li>
+                        <li class="list-group-item"> <a href="../Q_somos/quienes.html"><button class="bot">Quienes somos</button></a>   </li>
+                        <li class="list-group-item"> <a href="../servicios/opcion.html"><button class="bot">Servicios</button></a> </li>                        
                         <li class="list-group-item"> <a href="#"><button class="bot">Foro</button></a></li>
-                        <li class="list-group-item"> <a href="#"><button class="bot">Valoraciones</button></a> </li>
-                        <li class="list-group-item"> <a href="#"><button class="bot">Log in</button></a></li>
-                </nav>
+                        <li class="list-group-item"> <a href="login.html"><button class="bot">Log in</button></a></li>
+                    </ul>
             </div>
         </div>
     </header>
@@ -35,7 +34,7 @@
                     <label class="lab" for="id_usuario">Nombre de Usuario</label>
                     <input class="test" type="text" name="usr" id="id_usuario" placeholder="Usuario">
                     <label class="lab" for="id_pass">Contraseña</label>
-                    <input class="test" type="password" name="usr" id="id_pass" placeholder="Contraseña">
+                    <input class="test" type="password" name="pass" id="id_pass" placeholder="Contraseña">
                     <label class="lab" for="id_usuario">Confirmar Contraseña</label>
                     <input class="test" type="password" name="conf" id="id_conf" placeholder="Confirmar Contraseña">
                     <label class="lab" for="id_correo">Correo Electronico</label>
