--- a/FCT/Q_somos/quienes.html
+++ b/FCT/Q_somos/quienes.html
@@ -18,7 +18,7 @@
                     <ul class="list-group list-group-horizontal-lg">
                         <li class="list-group-item"> <a href=".."><button class="bot">Principal</button></a></li>
                         <li class="list-group-item"> <a href="#"><button class="bot">Quienes somos</button></a>   </li>
-                        <li class="list-group-item"> <a href="#"><button class="bot">Servicios</button></a> </li>                        
+                        <li class="list-group-item"> <a href="../servicios/opcion.html"><button class="bot">Servicios</button></a> </li>                        
                         <li class="list-group-item"> <a href="#"><button class="bot">Foro</button></a></li>
                         <li class="list-group-item"> <a href="../Registro/login.html"><button class="bot">Log in</button></a></li>
                     </ul>
