--- a/FCT/servicios/opcion.html
+++ b/FCT/servicios/opcion.html
@@ -17,11 +17,10 @@
                 
                     <ul class="list-group list-group-horizontal-lg">
                         <li class="list-group-item"> <a href=".."><button class="bot">Principal</button></a></li>
-                        <li class="list-group-item"> <a href="#"><button class="bot">Quienes somos</button></a>   </li>
+                        <li class="list-group-item"> <a href="../Q_somos/quienes.html"><button class="bot">Quienes somos</button></a>   </li>
                         <li class="list-group-item"> <a href="#"><button class="bot">Servicios</button></a> </li>                        
                         <li class="list-group-item"> <a href="#"><button class="bot">Foro</button></a></li>
-                        <li class="list-group-item"> <a href="#"><button class="bot">Valoraciones</button></a> </li>
-                        <li class="list-group-item"> <a href="../Registro/"><button class="bot">Log in</button></a></li>
+                        <li class="list-group-item"> <a href="../Registro/login.html"><button class="bot">Log in</button></a></li>
                     </ul>
             </div>
         </div>
