--- a/FCT/Q_somos/quienes.html
+++ b/FCT/Q_somos/quienes.html
@@ -19,8 +19,8 @@
                         <li class="list-group-item"> <a href=".."><button class="bot">Principal</button></a></li>
                         <li class="list-group-item"> <a href="#"><button class="bot">Quienes somos</button></a>   </li>
                         <li class="list-group-item"> <a href="../servicios/opcion.html"><button class="bot">Servicios</button></a> </li>                        
-                        <li class="list-group-item"> <a href="#"><button class="bot">Foro</button></a></li>
-                        <li class="list-group-item"> <a href="../Registro/login.html"><button class="bot">Log in</button></a></li>
+                        <li class="list-group-item"> <a href="../historial/lista.php"><button class="bot">Historial</button></a></li>
+                        <li class="list-group-item"> <a href="../Registro/login.php"><button class="bot">Log in</button></a></li>
                     </ul>
             </div>
         </div>
