--- a/FCT/index.html
+++ b/FCT/index.html
@@ -22,7 +22,7 @@
                         <li class="list-group-item"> <a href="index.html"><button class="bot">Principal</button></a></li>
                         <li class="list-group-item"> <a href="Q_somos/quienes.html"><button class="bot">Quienes somos</button></a>   </li>
                         <li class="list-group-item"> <a href="servicios/opcion.html"><button class="bot">Servicios</button></a> </li>                        
-                        <li class="list-group-item"> <a href="#"><button class="bot">Foro</button></a></li>
+                        <li class="list-group-item"> <a href="historial/lista.php"><button class="bot">Historial</button></a></li>
                         <li class="list-group-item"> <a href="Registro/login.php"><button class="bot">Log in</button></a></li>
                 </nav>
             </div>
